Copyright (c) 2002-2007 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 1.6.1

    Bugs fixed:

      - The lookup window now opens in the directory that was last
        opened.

      - In the lookup windowfield, a previously selected value is now
        shown selected.

      - Removed extra <br/> tag when viewing codesources in kupu,
        copied from trunk.

      - fix for bug 109008 copied from trunk

      - Changed the buttons that go to the import/export screens from
        inputs to links, thereby fixing the problem of sending a
        partial selection along to export. The code that handles the
        selection still exists, however we may get a request to enable
        selection someday so it works with full media export
        too. https://bugs.launchpad.net/silva/+bug/101809

      - Fixed import button missing in the export screen
        https://bugs.launchpad.net/silva/+bug/118335

      - When addding an item, hitting return caused the form to submit
        the cancel action. The form buttons have been reordered so
        that hitting return adds the item.

      - Several reserved ids such as 'home' were declared unreserved
        previously. Unfortunately it turned out that at least 'home' was
        reserved for a good reason, so to be sure re-reserved these ids, 
        except for 'search'.

      - fixed 148863: toc rendering not XHTML compliant, backported from trunk

  Silva 1.6

    Features added:

      - 2007-03-15: Containers show their modification datetime in the
        'modified' column of the contents table in edit mode.

      - If a file or image asset has an extension in its id, this is
        preserved in the fullmedia export, so if the zip file is unzipped
        by hand, the file types of the assets are obvious in those cases,
        and will preview properly in operating systems that support it.

      - If present, SilvaLayout will automaticly be registered in