@@ -1,0 +1,5 @@
+from zope.interface import Interface
+
+class ISubscriptorView(Interface):
+    def render(self):
+        """pass"""
