@@ -1,0 +1,98 @@
+<tal:block condition="nothing">
+  <!--
+  Copyright (c) 2002-2007 Infrae. All rights reserved.
+  See also LICENSE.txt
+  -->
+</tal:block><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html tal:omit-tag=""
+  lang="en"
+  xml:lang="en"
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:metal="http://xml.zope.org/namespaces/metal"
+  xmlns:notal="http://www.infrae.com/silva/notal"
+  xmlns:tal="http://xml.zope.org/namespaces/tal"
+  xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+  i18n:domain="silva"
+  tal:define="feedback options/message|nothing;
+              show_form options/show_form|python:True;
+              message_type options/message_type | nothing;
+              warning python:message_type == 'warning' and message_type or nothing;
+              subscr_emailaddress options/subscr_emailaddress | nothing;
+              cancel_emailaddress options/cancel_emailaddress | nothing;
+              ">
+<head>
+ <title>Subscriptions</title>
+</head>
+<body>
+
+
+  <div class="feedback"
+    tal:condition="feedback">
+    <span tal:content="feedback"
+      tal:attributes="class warning | nothing"
+      tal:omit-tag="not:warning"
+      i18n:translate="">
+      feedback message
+    </span>
+  </div>
+  <tal:block condition="show_form">
+   <div class="subscriptionform">
+    <form method="post" name="form" enctype="multipart/form-data"
+      tal:attributes="action string:${context/absolute_url}/subscriptor">
+     <h3 class="heading" i18n:translate="">
+       Subscribe to
+       &#xab;<tal:block i18n:name="title_or_id" content="python:context.get_title_or_id()" />&#xbb;
+     </h3>
+     <p class="p" i18n:translate="">
+       Fill in your email address if you want to receive email
+       notifications whenever a new version of this page or its
+       subdocuments becomes available.
+     </p>
+     <label for="subscr_email"><span i18n:translate="">email address</span><span class="warning">*</span></label>
+     <input type="text" name="emailaddress" id="subscr_email" size="30"
+       tal:attributes="value subscr_emailaddress"
+     />
+     <input class="control"
+       type="submit"
+       value="subscribe"
+       name="subscribe"
+       title="access key: alt-s"
+       accesskey="s"
+       i18n:attributes="title;value"
+     />
+    </form>
+   </div>
+   <div class="cancellationform">
+    <form method="post" name="form" enctype="multipart/form-data"
+      tal:attributes="action string:${context/absolute_url}/subscriptor">
+     <h3 class="heading" i18n:translate="">
+       Unsubscribe from
+       &#xab;<tal:block i18n:name="title_or_id" content="python:context.get_title_or_id()" />&#xbb;
+     </h3>
+     <p class="p" i18n:translate="">
+       Fill in your email address if you want to unsubscribe
+       from email notifications for this page and its subdocuments.
+     </p>
+     <label for="cancel_email"><span i18n:translate="">email address</span><span class="warning">*</span></label>
+     <input type="text" name="emailaddress" id="cancel_email" size="30"
+       tal:attributes="value cancel_emailaddress"
+     />
+     <input class="control"
+       type="submit"
+       value="unsubscribe"
+       name="unsubscribe"
+       title="access key: alt-u"
+       accesskey="u"
+       i18n:attributes="title;value"
+     />
+    </form>
+   </div>
+  </tal:block>
+  <div class="backlink">
+    <a tal:attributes="href context/absolute_url" i18n:translate="">
+      Return to
+      &#xab;<tal:block i18n:name="title_or_id" content="python:context.get_title_or_id()" />&#xbb;
+    </a>
+  </div>
+</body>
+</html>
