@@ -7,6 +7,14 @@ Silva changes
 
     Bugs fixed:
 
+      - Subscription Functionality for dLCMS Content Elements
+        https://bugs.launchpad.net/dlcms/+bug/152635
+        Added a Zope 3 (Five) view to the subscription framework,
+        accessible by appending '/subscriptor' to the public url of content.
+        This enables the subscriptor to be accessible when using SilvaLayout.
+        The old-style subscriptor, which uses layout_macro.html,  is still 
+        accessible by appending '/public/subscriptor'.
+
       - The lookup window now opens in the directory that was last
         opened.
 
